@@ -37,12 +37,13 @@ import java.text.NumberFormat;
 import java.util.Collection;
 import java.util.List;
 
-import static is.codion.framework.db.condition.Condition.where;
+import static is.codion.framework.db.condition.Condition.*;
 import static is.codion.framework.domain.entity.EntityDefinition.definition;
 import static is.codion.framework.domain.entity.KeyGenerator.identity;
 import static is.codion.framework.domain.entity.OrderBy.ascending;
 import static is.codion.framework.domain.property.Property.*;
 import static is.codion.plugin.jasperreports.model.JasperReports.classPathReport;
+import static java.util.stream.Collectors.toList;
 
 // tag::chinook[]
 public final class ChinookImpl extends DefaultDomain implements Chinook {
@@ -404,8 +405,7 @@ public final class ChinookImpl extends DefaultDomain implements Chinook {
     public Collection<Entity> execute(EntityConnection connection,
                                       Collection<Long> invoiceIds) throws DatabaseException {
       return connection.update(Entity.castTo(Invoice.class,
-                      connection.select(where(Invoice.ID)
-                              .in(invoiceIds)
+                      connection.select(where(attribute(Invoice.ID).in(invoiceIds))
                               .selectBuilder()
                               .forUpdate()
                               .fetchDepth(0)
@@ -413,7 +413,7 @@ public final class ChinookImpl extends DefaultDomain implements Chinook {
               .stream()
               .peek(Invoice::updateTotal)
               .filter(Invoice::isModified)
-              .toList());
+              .collect(toList()));
     }
   }
   // end::updateTotalsFunction[]
@@ -465,7 +465,7 @@ public final class ChinookImpl extends DefaultDomain implements Chinook {
 
     private static List<Long> randomTrackIds(EntityConnection connection, int noOfTracks,
                                              Collection<Entity> genres) throws DatabaseException {
-      return connection.select(Track.ID, where(Track.GENRE_FK).in(genres)
+      return connection.select(Track.ID, where(foreignKey(Track.GENRE_FK).in(genres))
               .selectBuilder()
               .orderBy(ascending(Track.RANDOM))
               .limit(noOfTracks)
@@ -480,7 +480,7 @@ public final class ChinookImpl extends DefaultDomain implements Chinook {
     @Override
     public Collection<Entity> execute(EntityConnection entityConnection,
                                       RaisePriceParameters parameters) throws DatabaseException {
-      SelectCondition selectCondition = where(Track.ID).in(parameters.trackIds())
+      SelectCondition selectCondition = where(attribute(Track.ID).in(parameters.trackIds()))
               .selectBuilder()
               .forUpdate()
               .build();
